# PQ-EDHOC

./: .gitmodules  DEBUG.md  Makefile  Makefile copy  README.MD  makefile_config.mk
.github/workflows/: ci.yml
inc/: edhoc.h
inc/common/: crypto_wrapper.h  oscore_edhoc_error.h
inc/edhoc/: buffer_sizes.h  suites.h
samples/common/: sock.h
samples/liboqs/: example.c  qs-internal
samples/linux_edhoc/initiator/: Makefile
samples/linux_edhoc/initiator/src/: main.cpp
samples/linux_edhoc/responder/: Makefile
samples/linux_edhoc/responder/src/: main.cpp
samples/linux_edhoc_block/initiator/: Makefile
samples/linux_edhoc_block/initiator/src/: main.cpp
samples/linux_edhoc_block/responder/: Makefile
samples/linux_edhoc_block/responder/src/: main.cpp
samples/linux_edhoc_block_pq/: README.MD
samples/linux_edhoc_block_pq/initiator/: Makefile  README.md
samples/linux_edhoc_block_pq/initiator/src/: main.cpp
samples/linux_edhoc_block_pq/responder/: Makefile  README.md
samples/linux_edhoc_block_pq/responder/src/: main.cpp
samples/linux_pq_edhoc/: README.MD
samples/linux_pq_edhoc/initiator/: Makefile  README.md  initiator
samples/linux_pq_edhoc/initiator/src/: main.cpp
samples/linux_pq_edhoc/responder/: Makefile  README.md
samples/linux_pq_edhoc/responder/src/: main.cpp
samples/linux_pq_edhoc_check_sig/initiator/: Makefile  README.md
samples/linux_pq_edhoc_check_sig/initiator/src/: main.cpp
samples/linux_pq_edhoc_check_sig/responder/: Makefile  responder
samples/linux_pq_edhoc_check_sig/responder/src/: main.cpp
samples/zephyr_edhoc/initiator/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc/initiator/src/: main.c
samples/zephyr_edhoc2/initiator/: CMakeLists.txt
samples/zephyr_edhoc_block_client/initiator/: CMakeLists.txt  Kconfig  prj.conf
samples/zephyr_edhoc_block_client/initiator/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_9/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_9/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_10/: CMakeLists.txt  Kconfig
samples/zephyr_edhoc_block_client_pq/initiator_test_10 copy/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_10 copy/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_10/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_11/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_11/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_14/: CMakeLists.txt  Kconfig  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_14/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_14_bike/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_14_bike/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_7/: CMakeLists.txt
samples/zephyr_edhoc_block_client_pq/initiator_test_7/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_8/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_8/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_9/: CMakeLists.txt
samples/zephyr_edhoc_block_client_pq/initiator_test_9/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark copy/build_repo/: suit15_x5t_elf.txt  suit7_x5t_elf.txt
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark copy/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark/build_repo/: suit12_x5t_elf.txt  suit14_x5t_elf.txt  suit2_x5t_elf.txt
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_2/: CMakeLists.txt
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_2/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_3/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_3/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_dilithium/: CMakeLists.txt
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_dilithium-base/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_dilithium-base/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_benchmark_dilithium/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_test_vector_11/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_tests/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_tests/src/: main.c
samples/zephyr_edhoc_block_client_pq/initiator_tests_b/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_tests_cert/: CMakeLists.txt  prj.conf
samples/zephyr_edhoc_block_client_pq/initiator_tests_cert/src/: main.c
samples/zephyr_pqm4_test/initiator/: prj.conf
src/cbor/: edhoc_decode_message_2.c  edhoc_encode_message_1.c
src/common/: crypto_wrapper.c
src/edhoc/: bstr_encode_decode.c  cert.c  ciphertext.c  edhoc_exporter.c  initiator.c  okm.c  plaintext_decode.c  responder.c  retrieve_cred.c  signature_or_mac_msg.c  suites.c
src/liboqs/include/oqs/: oqsconfig.h
test/: CMakeLists.txt  main.c  prj.conf
test/edhoc_integration_tests/: initiator_responder_interaction.c
test_pq/: CMakeLists.txt  README.MD  main.c  prj.conf
test_pq/edhoc_integration_tests/: edhoc_tests_rfc9529.c  initiator_responder_interaction.c
test_pq_2/: CMakeLists.txt  app.overlay  main.c  prj.conf
test_pq_2/edhoc_integration_tests/: edhoc_tests.h  edhoc_tests_separate.c
test_pq_mem/: CMakeLists.txt  app_percents.py  app_percents_excludes.py  compare.py  crypto.txt  entropy.c  lib_code_size.py  main.c  percents.py  pqm4.txt  prj.conf  runshel.sh  size.txt  test.txt
test_vectors/: edhoc_test_vectors_p256_v16.h  hawk
(+120 files in other folders)
